// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answers should render a component for each answer type: Checkbox 1`] = `
<styled.div>
  <MultipleChoiceAnswer
    answer={
      {
        "options": [],
        "properties": {},
        "type": "Checkbox",
      }
    }
  />
  0
</styled.div>
`;

exports[`Answers should render a component for each answer type: Currency 1`] = `
<styled.div>
  <CurrencyAnswer
    answer={
      {
        "options": [],
        "properties": {},
        "type": "Currency",
      }
    }
  />
  0
</styled.div>
`;

exports[`Answers should render a component for each answer type: Number 1`] = `
<styled.div>
  <TextAnswer
    answer={
      {
        "options": [],
        "properties": {},
        "type": "Number",
      }
    }
  />
  0
</styled.div>
`;

exports[`Answers should render a component for each answer type: Percentage 1`] = `
<styled.div>
  <AnswerTrailingUnit
    answer={
      {
        "options": [],
        "properties": {},
        "type": "Percentage",
      }
    }
  />
  0
</styled.div>
`;

exports[`Answers should render a component for each answer type: Radio 1`] = `
<styled.div>
  <MultipleChoiceAnswer
    answer={
      {
        "options": [],
        "properties": {},
        "type": "Radio",
      }
    }
  />
  0
</styled.div>
`;

exports[`Answers should render a component for each answer type: TextArea 1`] = `
<styled.div>
  <TextAreaAnswer
    answer={
      {
        "options": [],
        "properties": {},
        "type": "TextArea",
      }
    }
  />
  0
</styled.div>
`;

exports[`Answers should render a component for each answer type: TextField 1`] = `
<styled.div>
  <TextAnswer
    answer={
      {
        "options": [],
        "properties": {},
        "type": "TextField",
      }
    }
  />
  0
</styled.div>
`;

exports[`Answers should render a component for each answer type: Unit 1`] = `
<styled.div>
  <AnswerTrailingUnit
    answer={
      {
        "options": [],
        "properties": {},
        "type": "Unit",
      }
    }
  />
  0
</styled.div>
`;

exports[`Answers should render date answers 1`] = `
<styled.div>
  <DateAnswer
    answer={
      {
        "properties": {
          "format": "dd/mm/yyyy",
        },
        "type": "Date",
      }
    }
  />
</styled.div>
`;

exports[`Answers should render date range answers 1`] = `
<styled.div>
  <DateRangeAnswer
    answer={
      {
        "properties": {},
        "type": "DateRange",
      }
    }
  />
</styled.div>
`;
